Converted Get test case to cucumber steps